# poljoprivredne-parcele

./: .gitignore  README.md  app.py  dokumentacija.md  main.py  pyproject.toml
data/: ndvi_raster.tif
models/: crop_classifier.pkl  label_encoder.pkl  scaler.pkl
src/: config.py  db_crud_queries.py  db_setup.py  geo_loader.py  geo_overlay.py  map_viewer.py  ml_crop_detector.py
templates/: index.html
